--- a/traefik.yml
+++ b/traefik.yml
@@ -32,7 +32,7 @@ services:
           - node.labels.service == traefik
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.api.rule=Host(`traefik.chrisich.tech`)"
+        - "traefik.http.routers.api.rule=Host(`dashboard.chrisich.tech`)"
         - "traefik.http.routers.api.entrypoints=web-secured"
         - "traefik.http.routers.api.tls=true"
         - "traefik.http.routers.api.tls.certresolver=mytlschallenge"
@@ -42,4 +42,3 @@ services:
 networks:
   spark-net:
     external: true
-
